<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true"
    android:id="@+id/searchpage"
    android:backgroundTint="#FFFFFF"
    android:background="#FFFFFF"

    tools:context=".search.searchPage.view.SearchPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/searchText"
            android:layout_width="170dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/allura"
            android:text="@string/searchText"
            android:textColor="#070C23"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchIng"
            android:layout_width="304dp"
            android:layout_height="52dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/allura"
            android:text="@string/searchIng"
            android:textColor="#070C23"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchimage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerIngrediant"
            android:layout_width="382dp"
            android:layout_height="240dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchIng"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/ingrediant_raw"
            tools:orientation="vertical"
            tools:spanCount="3" />

        <TextView
            android:id="@+id/searchcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/allura"
            android:text="@string/searchCat"
            android:textColor="#070C23"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerIngrediant" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategory"
            android:layout_width="379dp"
            android:layout_height="237dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchcat"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/category_raw"
            tools:orientation="vertical"
            tools:spanCount="3" />

        <TextView
            android:id="@+id/searchCoun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/allura"
            android:text="@string/searchCoun"
            android:textColor="#070C23"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerCategory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCountry"
            android:layout_width="396dp"
            android:layout_height="624dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchCoun"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/country_raw"

            tools:orientation="vertical"
            tools:spanCount="4" />

        <ImageView
            android:id="@+id/searchimage"
            android:layout_width="312dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/searchch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

